[gd_scene load_steps=8 format=3 uid="uid://ccum0nu0ovqh6"]

[ext_resource type="Script" path="res://S/s_test.gd" id="1_3g5qc"]
[ext_resource type="Texture2D" uid="uid://dfrdvaopu7bya" path="res://素材/bg.png" id="1_70mxo"]
[ext_resource type="PackedScene" uid="uid://btvhpsmpk8tg3" path="res://M/player_move.tscn" id="3_tet03"]
[ext_resource type="FontFile" uid="uid://dke7jbtml1fil" path="res://素材/SmileySans-Oblique.ttf" id="4_h1am3"]
[ext_resource type="AudioStream" uid="uid://c5e58u42d4iav" path="res://素材/音效/pieces_down_yes.mp3" id="5_8s6xe"]
[ext_resource type="AudioStream" uid="uid://dh8pl7whao7o6" path="res://素材/音效/pieces_del.mp3" id="6_1ep10"]
[ext_resource type="AudioStream" uid="uid://cv2ilwrgi35m3" path="res://素材/音效/pieces_down_no.mp3" id="7_ayalg"]

[node name="S_test" type="Node2D"]
script = ExtResource("1_3g5qc")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -10
texture = ExtResource("1_70mxo")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="chessposition" type="Node2D" parent="."]
position = Vector2(-239, -262)
metadata/_edit_lock_ = true

[node name="b_chessposition" type="Node2D" parent="."]
position = Vector2(-239, -262)
metadata/_edit_lock_ = true

[node name="player_move" parent="b_chessposition" instance=ExtResource("3_tet03")]
visible = false
scale = Vector2(1.5, 1.5)

[node name="over" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="Label" type="Label" parent="over"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -30.5
offset_right = 80.0
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_h1am3")
theme_override_font_sizes/font_size = 50
text = "红方获胜"

[node name="Button" type="Button" parent="over"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = 28.0
offset_right = 84.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_h1am3")
theme_override_font_sizes/font_size = 50
text = "再来一局"

[node name="Button" type="Button" parent="."]
offset_left = -467.0
offset_top = -17.0
offset_right = -395.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource("4_h1am3")
theme_override_font_sizes/font_size = 50
text = "再来一局"

[node name="luozi" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8s6xe")

[node name="chi" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1ep10")

[node name="cuowu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ayalg")

[connection signal="button_down" from="over/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
